# budlight

./: .gitignore  Cargo.toml  README.md
buddy/: buddy.toml  instructions.md
buddy/files/: best-practices.md
src/: main.rs
src/ai/: asst.rs  mod.rs  msg.rs
src/buddy/: config.rs  mod.rs
src/utils/: cli.rs  files.rs  mod.rs
