[package]
name = "budlight"
version = "0.1.0"
description = "custom minimal GPT copilot implementation for more control over AI code suggestions."
readme = "README.md"
edition = "2021"
exclude = [".github", "*.log", "Dockerfile"]
keywords = ["ai", "chat-gpt", "tui", "terminal", "utility", "copilot", "gpt", "llm"]

[lints.rust]
unsafe_code = "forbid"
# unused = "allow"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = "0.17"
# -- D/Serialize
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- CLI
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"
# -- File-Handling
walkdir = "2"
globset = "0.4"
# -- Misc
derive_more = { version = "1.0.0-beta", features = ["from", "display", "deref"] }
